--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
 	"compilerOptions": {
 		"outDir": "build",
 		"allowJs": false,
-		"target": "es2018",
+		"target": "esnext",
 		"lib": ["dom", "es5", "es6", "es7"],
 		"alwaysStrict": true,
 		"removeComments": true,
@@ -19,7 +19,7 @@
 		"allowUnreachableCode": false,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
-		"newLine": "LF",
+		"newLine": "LF"
 	},
 	"include": [
 		"./"
