Finished clean migration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,10 +12,9 @@
 		"noImplicitReturns": true,
 		"noImplicitThis": true,
 		"strictNullChecks": true,
-		"moduleResolution": "node",
-		"module": "commonjs",
 		"strictFunctionTypes": true,
 		"allowUnusedLabels": false,
+		"module": "ESNext",
 		"allowUnreachableCode": false,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
