--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
 		"newLine": "LF",
+		"moduleResolution": "node"
 	},
 	"include": [
 		"./"
