--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,7 +35,7 @@
 		"@typescript-eslint/await-thenable": "error",
 		"@typescript-eslint/ban-ts-comment": "error",
 		"@typescript-eslint/ban-types": "error",
-		"@typescript-eslint/class-literal-property-style": ["error", "getters"],
+		"@typescript-eslint/class-literal-property-style": ["off"],
 		"@typescript-eslint/consistent-indexed-object-style": "off",
 		"@typescript-eslint/consistent-type-assertions": [
 			"error",
