--- a/package.json
+++ b/package.json
@@ -28,9 +28,7 @@
         "eslint-plugin-no-null": "^1.0.2",
         "eslint-plugin-prefer-arrow": "^1.2.3",
         "ts-node": "^10.2.1",
-        "typescript": "^4.4.3"
+        "typescript": "^4.4.4"
     },
-    "dependencies": {
-        "mysql2": "^2"
-    }
+    "dependencies": {}
 }
